Fixed broken tooltips in SectionsTab & updated spacing for table header

--- a/components/styling/global.css
+++ b/components/styling/global.css
@@ -39,6 +39,10 @@
     display: none !important;
 }
 
+.rdt_TableHead {
+    margin-left: -28px !important;
+}
+
 .loader-bg, body {
     background: #2C2C2C !important;
 }
